Squashed commit of the following:
commit 090c4c181b7a6094d8e63b9075e3974e69fe08b3
Merge: 55fd8344 5876740f
Author: QQ <43517024+LagrangeQ@users.noreply.github.com>
Date:   Thu Apr 16 19:22:35 2026 +0800

    Merge pull request #17 from fyinfor/limy

    feat: enhance pricing model filtering and update ratio handling

commit 5876740f897bbcc106bbade2b0cf3ae1609a4e17
Merge: 3ad552b7 55fd8344
Author: minyong <541490527@qq.com>
Date:   Thu Apr 16 19:15:28 2026 +0800

    Merge branch 'dev' of https://github.com/fyinfor/token-factory into limy

commit 3ad552b74035fcb64b49d480a213c6136597aeb9
Author: minyong <541490527@qq.com>
Date:   Thu Apr 16 19:13:49 2026 +0800

    feat: enhance pricing model filtering and update ratio handling

    - Implemented filtering of pricing models based on configuration in GetPricing function.
    - Added a new function ModelHasConfiguredPricing to check for explicit pricing configurations.
    - Updated fallback behavior in GetModelRatio to use a new constant for self-use mode.

commit 55fd83445fe3f2f75c095629259dcfec527e3729
Author: yuanljin <396749262@qq.com>
Date:   Thu Apr 16 19:08:34 2026 +0800

    供应商查功能提交

commit d60196872cc75a579bca06455470b6df39bc8a77
Merge: ae03c088 aaf33d8f
Author: QQ <43517024+LagrangeQ@users.noreply.github.com>
Date:   Thu Apr 16 19:06:20 2026 +0800

    Merge pull request #15 from fyinfor/Long

    优化分销商权限逻辑 由固定等级5 改为角色信息
